Fix content and layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -517,6 +517,7 @@ main {
 }
 
 .tech-used p {
+    font-family: consolas;
     color: var(--accent-color);
     margin-bottom: 0px;
 }
